apps/kubernetes/k3s/apps/tube-archivist/elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: tube-archivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: bbilly1/tubearchivist-es
          ports:
            - containerPort: 9200
          securityContext:
            capabilities:
              add:
                - IPC_LOCK  # required for memlock unlimited
          resources:
            requests:
              cpu: 500m
              memory: 1.5Gi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: elasticsearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: tube-archivist
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
